# MCP-Travel-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  MCP_ALIGNMENT_CHECKLIST.md  PRD.md  Planning.md  README.md  Setup.md  Tasks.md  pyproject.toml  run_all_servers.py
.github/: copilot-instructions.md  copilot_instructions.md
.github/workflows/: ci.yml
app/: cli.py  main.py
app/agent/: clients.py  models.py  orchestrator.py  query_parser.py
app/mcp_servers/geocoding/: Dockerfile  server.py
app/mcp_servers/poi_discovery/: Dockerfile  server.py
app/mcp_servers/trivia/: Dockerfile  server.py
app/mcp_servers/wikipedia/: Dockerfile  server.py
tests/integration/: test_agent_api.py  test_live_geocode.py  test_live_poi_discovery.py  test_live_trivia.py  test_live_wikipedia.py
tests/unit/: test_geocoding.py  test_orchestrator.py  test_poi_discovery.py  test_query_parser.py  test_trivia.py  test_wikipedia.py
